--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,10 @@ cache:
 
 before_install:
   - mkdir -p build/logs
+  - 'if [ $(phpenv version-name) == "5.5" ]; then sudo pecl install mongodb; fi'
+  - 'if [ $(phpenv version-name) == "5.6" ]; then sudo pecl install mongodb; fi'
+  - 'if [ $(phpenv version-name) == "7.0" ]; then sudo pecl install mongodb; fi'
+  - 'if [ $(phpenv version-name) == "7.1" ]; then sudo pecl install mongodb; fi'
 
 install:
   - composer install --prefer-dist --no-interaction
