--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,11 @@ cache:
 
 before_install:
   - mkdir -p build/logs
-  - 'if [ $(phpenv version-name) == "5.5" ]; then sudo pecl install mongodb; fi'
-  - 'if [ $(phpenv version-name) == "5.6" ]; then sudo pecl install mongodb; fi'
-  - 'if [ $(phpenv version-name) == "7.0" ]; then sudo pecl install mongodb; fi'
-  - 'if [ $(phpenv version-name) == "7.1" ]; then sudo pecl install mongodb; fi'
+  - sudo apt-get -qq update
+  - 'if [ $(phpenv version-name) == "5.5" ]; then sudo apt-get install -y php5.6-mongo; fi'
+  - 'if [ $(phpenv version-name) == "5.6" ]; then sudo apt-get install -y php5.6-mongo; fi'
+  - 'if [ $(phpenv version-name) == "7.0" ]; then sudo apt-get install -y php7.0-mongo; fi'
+  - 'if [ $(phpenv version-name) == "7.1" ]; then sudo apt-get install -y php7.1-mongo; fi'
 
 install:
   - composer install --prefer-dist --no-interaction
