--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,14 @@
   "description": "Common classes of Runalyze",
   "license": "MIT",
   "require": {
-    "php": ">=5.5.9"
+    "php": ">=5.5.9",
+    "league/flysystem": "^1.0",
+    "ocramius/proxy-manager": "1.0.*"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.*",
-    "friendsofphp/php-cs-fixer": "^1.11"
+    "friendsofphp/php-cs-fixer": "^1.11",
+    "league/flysystem-memory": "^1.0"
   },
   "autoload": {
     "psr-4": {
