--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,11 @@
   "description": "Common classes of Runalyze",
   "license": "MIT",
   "require": {
-    "php": ">=5.5.9"
+    "php": ">=8.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.8.*",
-    "friendsofphp/php-cs-fixer": "^1.11"
+    "phpunit/phpunit": "^9.0",
+    "friendsofphp/php-cs-fixer": "^3.2"
   },
   "autoload": {
     "psr-4": {
