add attribute to ignore constants

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<phpunit bootstrap="vendor/autoload.php" colors="true">
-    <testsuites>
-        <testsuite name="Runalyze common">
-            <directory suffix="Test.php">./src/Tests/</directory>
-        </testsuite>
-    </testsuites>
-    <filter>
-        <whitelist>
-            <exclude>
-                <directory>./src/Tests/</directory>
-            </exclude>
-            <directory>./src/</directory>
-        </whitelist>
-    </filter>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" bootstrap="vendor/autoload.php" colors="true" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
+  <coverage>
+    <include>
+      <directory>./src/</directory>
+    </include>
+    <exclude>
+      <directory>./src/Tests/</directory>
+    </exclude>
+  </coverage>
+  <testsuites>
+    <testsuite name="Runalyze common">
+      <directory>./src/Tests/</directory>
+    </testsuite>
+  </testsuites>
 </phpunit>
