--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "runalyze/common",
   "description": "Common classes of Runalyze",
   "license": "MIT",
+  "version": "1.1.0",
   "require": {
     "php": ">=8.0"
   },
@@ -13,5 +14,8 @@
     "psr-4": {
       "Runalyze\\Common\\": "src/"
     }
+  },
+  "scripts": {
+    "php-cs-fixer": "php-cs-fixer fix --config=./.php-cs-fixer.dist.php"
   }
 }
